adicionando makefile, bin e terminando implementações

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,12 +1,46 @@
 doctype html
 html
 	head
-		title='Search'
-		link(rel='stylesheet', href='/bower_components/semantic/npm/elements/input.css')
-		link(rel='stylesheet', href='/bower_components/semantic/npm/elements/header.css')
-		link(rel='stylesheet', href='/bower_components/semantic/npm/elements/icon.css')		
-	body
-		div(class='ui small center aligned inverted red block header')
-			div(class='ui input small left icon')
-				input(type='text', placeholder='Busca...')
-				i(class='search icon')
+		title Search
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+		link(rel='stylesheet', href='/bower_components/semantic/build/minified/elements/input.min.css')
+		link(rel='stylesheet', href='/bower_components/semantic/build/minified/elements/header.min.css')
+		link(rel='stylesheet', href='/bower_components/semantic/build/minified/elements/icon.min.css')		
+		link(rel="stylesheet", href="/bower_components/semantic/build/minified/collections/menu.min.css")
+		link(rel="stylesheet", href="/bower_components/semantic/build/minified/collections/grid.min.css")		
+		link(rel="stylesheet", href="/style/main.css")		
+	body(ng-app="liveSearchApp")
+		div(class='ui small center aligned inverted red block header', ng-controller="searchController")
+			div(class="ui grid")
+				div(class="six wide column")					
+				div(class="three wide column")				
+					div(class='ui input small left icon')
+						input(type='text', placeholder='Busca...', ng-model="search.value")
+						i(class='search icon')		
+					div(id='search-menu', class="ui vertical menu", ng-show="search.value")
+						a(class="item highlight-item" ng-repeat='highlight in highlights', href="highlight.url")
+							img(image-source-set data-src='{{highlight.logo}}')
+							strong(ng-bind="highlight.title")
+						div(class="item", ng-show='suggestions.length > 0')
+							span(class="search-suggestions", translate='search.suggestions')
+							br(class='clearfix')
+							div(class="menu")
+								a(class='item', ng-repeat='obj in suggestions | matchList:search.value')
+									b(ng-bind='obj.suggestion | match:search.value:true')
+									span(ng-bind='obj.suggestion | match:search.value:false')
+						a(class='item fixed-suggest', ng-show='sanitized', href='http://www.globo.com/busca/?q={{sanitized}}', target="_blank")
+							span(translate='find.globo', translate-values="{{search.value | limitedTo:10}}")
+						a(class='item fixed-suggest', ng-show='sanitized', href='https://www.google.com/?#q={{sanitized}}', target="_blank")
+							span(translate='find.web', translate-values="{{search.value | limitedTo:10}}")
+
+		script(type='text/javascript', src='/bower_components/lodash/dist/lodash.min.js')
+		script(type='text/javascript', src='/bower_components/string/lib/string.min.js')
+		script(type='text/javascript', src='/bower_components/angular/angular.min.js')
+		script(type='text/javascript', src='/bower_components/angular-translate/angular-translate.min.js')		
+		script(type='text/javascript', src='/js/main.js')
+		script(type='text/javascript', src='/js/messages.js')
+		script(type='text/javascript', src='/js/liveSearchConfig.js')
+		script(type='text/javascript', src='/js/liveSearchFilters.js')
+		script(type='text/javascript', src='/js/liveSearchDirective.js')
